# photo-mcp-server

./: Cargo.toml  README.md  build.sh  env  mcp.json  run-npx  run.sh
certs/: gen-certs.sh
src/: handler.rs  lib.rs  main.rs  server.rs
src/core/: error.rs  exif.rs  image.rs  image_cache.rs  mod.rs  traversal.rs  yolo.rs  zip.rs
src/resources/: photo.rs
src/tools/: fs.rs  mod.rs  photo.rs
