[package]
name = "photo-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
hyper-server = "0.6.0"
image = "0.25.8"
kamadak-exif = "0.6.1"
lazy_static = "1.5.0"
regex = "1.11.3"


rust-mcp-sdk = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "std",
] }
zip = "6.0.0"
